# Hello-CMake

./: CMakeLists.txt  main.cpp
